Add Japanese and Traditional Chinese language translations with localization details

--- a/example/langs/zh-TW.json
+++ b/example/langs/zh-TW.json
@@ -1,1 +1,18 @@
-{}
+{
+  "a": {
+    "apple": "蘋果公司",
+    "nested": {
+      "phrase": "我可以吃玻璃，這並不會傷害我。"
+    }
+  },
+  "a.phrase": "我可以吃玻璃，這並不會傷害我。",
+  "api": "應用程式介面",
+  "hello": "你好",
+  "home.subtitle": "例如，加密貨幣和區塊鏈技術本質上是為了在不需要可信任的第三方介入的情況下運作而創造的。",
+  "home.title": "區塊鏈中的去中心化是什麼？",
+  "home.with_ai": "我們的項目為客戶提供強大的模型上下文協定服務。",
+  "user_view.profile.hint": "在未經同意的情況下，我們不會分享或披露任何個人信息，除非為本通知中所述的目的或法律要求所需。",
+  "user_view.profile.subtitle": "更新你的個人信息",
+  "user_view.profile.title": "個人檔案",
+  "user_view.save": "儲存"
+}
